security.tf
# Get the public IP address of the machine running Terraform
data "http" "my_ip" {
  url = "https://ifconfig.me/ip"
}


# Create a security group allowing SSH and HTTP access
resource "aws_security_group" "sg" {
  name        = "sg"
  description = "Security group"
  vpc_id      = module.network.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.my_ip.response_body)}/32"]
  }

  ingress {
    description = "HTTP"
    from_port   = 5001
    to_port     = 5001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  tags = {
    "Name"    = "Security Group"
    "Created" = "Terraform"
  }
}
